# passing_intention_lstm

./: .gitignore  1_preprocessing.py  2_split.py  3_dataset.py  4_model.py  5_train.py  6_eval.py  README.md  pyproject.toml
.ipynb_checkpoints/: AIS-based-LSTM-learn-checkpoint.ipynb  AIS_based_LSTM-process-checkpoint.ipynb
aux_code/: learning_preprocess.py
datasets/: preprocessed_test_dataset.parquet
datasets/dk_csv_20180101/: aisdk_20180101_0.pkl  aisdk_20180101_1.pkl  aisdk_20180101_10.pkl  aisdk_20180101_100.pkl  aisdk_20180101_101.pkl  aisdk_20180101_102.pkl  aisdk_20180101_103.pkl  aisdk_20180101_104.pkl  aisdk_20180101_105.pkl  aisdk_20180101_106.pkl  aisdk_20180101_107.pkl  aisdk_20180101_108.pkl  aisdk_20180101_109.pkl  aisdk_20180101_11.pkl  aisdk_20180101_110.pkl  aisdk_20180101_111.pkl  aisdk_20180101_112.pkl  aisdk_20180101_113.pkl  aisdk_20180101_114.pkl  aisdk_20180101_115.pkl  aisdk_20180101_116.pkl  aisdk_20180101_117.pkl  aisdk_20180101_118.pkl  aisdk_20180101_119.pkl  aisdk_20180101_12.pkl  aisdk_20180101_120.pkl  aisdk_20180101_121.pkl  aisdk_20180101_122.pkl  aisdk_20180101_123.pkl  aisdk_20180101_124.pkl  aisdk_20180101_125.pkl  aisdk_20180101_126.pkl  aisdk_20180101_127.pkl  aisdk_20180101_128.pkl  aisdk_20180101_129.pkl  aisdk_20180101_13.pkl  aisdk_20180101_130.pkl  aisdk_20180101_131.pkl  (+162 more)
notebooks/: AIS-based-LSTM-learn --backup.ipynb  AIS-based-LSTM-learn-tune.ipynb  AIS-based-LSTM-learn.ipynb  AIS-synthetic-generator.ipynb  AIS_based_LSTM-preprocess.ipynb  AIS_based_LSTM-process.ipynb  EDA.ipynb
old/: AIS-based-LSTM-learn-old.ipynb
(+1407 files in other folders)
