[tool.poetry]
name = "LSTM-Training"
version = "0.1.0"
description = "Training LSTM for Passing Intention Paper"
authors = ["Ari Chadda and Mingi Jeong"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.13.1"
torchmetrics = "^1.1.0"
matplotlib = "^3.7.2"
PyYAML = "^6.0.1"
numpy = "^1.25.2"
pandas = "^2.0.3"
ray = "^2.6.3"
pyarrow = "^13.0.0"
tqdm = "^4.66.1"
tensorboard = "^2.14.0"
wandb = "^0.15.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
