[tool.poetry]
name = "Neural Network Training for Active Learning-augmented Intent-aware Obstacle Avoidance of Autonomous Surface Vehicles in High-traffic Waters Paper"
version = "1.0.0"
description = "This repository contains the code for our LSTM-backbone neural network training to predict the side a vessel will pass: left or right to your vessel."
authors = ["Ari Chadda and Mingi Jeong"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.13.1"
torchmetrics = "^1.1.0"
matplotlib = "^3.7.2"
PyYAML = "^6.0.1"
numpy = "^1.25.2"
pandas = "^2.0.3"
ray = "^2.6.3"
pyarrow = "^13.0.0"
tqdm = "^4.66.1"
tensorboard = "^2.14.0"
wandb = "^0.15.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
